2003-05-28  Ville Palo <vi64pa@kolumbus.fi>

	* XmlDataDocumentTest.cs: fixed some tests. Now works better on ms.net
	
2003-05-13  Martin Willemoes Hansen <mwh@sysrq.dk>
	* XmlDataDocumentTest.cs: Inherited from Assertion and removed
          Assertion. prefixes

2003-01-28  Ville Palo <vi64pa@koti.soon.fi>

	* XmlDataDocumentTest.cs: Fixed some tests
	
2003-01-13  Ville Palo <vi64pa@koti.soon.fi>

	* XmlDataDocumentTest.cs: Added more tests