@@ -1,3 +1,7 @@
+2004-03-18  Atsushi Enomoto <atsushi@ximian.com>
+
+	* XmlDataDocumentTest.cs : file path fixes.
+
 2003-05-28  Ville Palo <vi64pa@kolumbus.fi>
 
 	* XmlDataDocumentTest.cs: fixed some tests. Now works better on ms.net
